# planner.io

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GEMINI_SETUP.md  GETSCHEDULE_SETUP.md  ITINERARY_SYNC_SETUP.md  LOCAL_DISCOVERY_API.md  MCP_TRAVEL_TOOLS.md  QUICK_START.md  README.md  SETUP_GUIDE.md  UPGRADE_SUMMARY.md  VOICE_INPUT_SETUP.md  deploy.ps1  fly.toml  pyproject.toml  report.md  requirements.txt  requirements_mcp.txt  simple_local_discovery_api.py  simple_travel_server.py  start.py  start_gemini_server.py  start_mcp_server.py  test_crewai_compatibility.py  test_gemini.py  test_local_discovery_api.py  travel_plan.md
app/: __init__.py  main.py  models.py
app/services/: __init__.py  crew_service.py
frontend/: .dockerignore  Dockerfile  README.md  fly.toml  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppSidebar.tsx  ChatInterface.tsx  MapView.tsx  TripMaxxLogo.tsx
frontend/src/lib/: geocoding.ts  places-service.ts
src/planner/: api_handler.py  config.py  crew.py  gemini_server.py  gemini_tools.py  getschedule.py  itinerary.json  itinerary.txt  itinerary_sync_and_email.py  main.py  mcp_server.py  models.py  test.py  travel_api.py  voice_input_whisper.py  voice_transcribe.py
src/planner/cached_results/: www_nomadicmatt_com_travel-blogs_best-hostels-in-tokyo_.json  www_thebrokebackpacker_com_best-hostels-in-tokyo_.json  www_thebrokebackpacker_com_cheap-hostels-in-tokyo_.json
src/planner/config/: agents.yaml  tasks.yaml
(+20 files in other folders)
