[project]
name = "planner"
version = "0.1.0"
description = "planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
planner = "planner.main:run"
run_crew = "planner.main:run"
train = "planner.main:train"
replay = "planner.main:replay"
test = "planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
